--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -1,13 +1,37 @@
 body {
-  max-width:60em;
-  margin: 1em auto;
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
   background-color: black;
   color: white;
 }
 
 h1 {
-	
   color: white;
-  font-size: larger;
-  text-align:center;
+  font-size: 5em;
+  text-align: center;
+}
+
+footer {
+  color: black;
+  background-color: white;
+  text-align: center;
+  margin-top: auto;
+  width: 100%;
+  padding: 1em 0;
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+}
+
+footer a {
+  color: black;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
 }
