--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -35,3 +35,32 @@ footer a {
 footer a:hover {
   text-decoration: underline;
 }
+
+header {
+  color: black;
+  background-color: white;
+  text-align: center;
+  margin-top: top;
+  width: 100%;
+  padding: 0em 0;
+  font-size: 1.5em;
+}
+
+header ul {
+  list-style: none;
+  padding: 0;
+}
+header li {
+  display: inline;
+}
+
+header a {
+  color: black;
+  text-decoration: none;
+}
+
+header a:hover {
+  text-decoration: underline;
+}
+
+
