--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -15,12 +15,17 @@ h1 {
 h2 {
   text-align: center;
 }
-
+h3 {
+  text-align: center;
+}
 p {
   text-align: center;
   font-size: 1.6em;
 }
 
+a {
+  color: white;
+}
 ul {  
   padding: 0;
 }
